# Rtype

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  IDisplay.hpp  Protocol.txt  Protocole.md  README.md  a  docker-compose.yml  hello.cpp  main.cpp  sclient.conf  server.conf  test.bat
client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
client/include/: Animation.hpp  AutoDestructTimer.hpp  Background.hpp  Client.hpp  ClientRoom.hpp  Core.hpp  Game.hpp  GraphicalCore.hpp  GraphicsManager.hpp  Login.hpp  RaySound.hpp  Speed.hpp  Sprite.hpp  Window.hpp
client/include/Raylib/: AudioDevice.hpp  RaySound.hpp  Sprite.hpp  Texture.hpp  Window.hpp
client/include/Systems/: SystemAnimation.hpp  SystemAutoDestructTimer.hpp  SystemBackground.hpp  SystemMusic.hpp  SystemSpeed.hpp  SystemSprite.hpp  SystemTime.hpp
client/lib/asio_client/include/: TcpClient.hpp  UdpClient.hpp
client/lib/asio_client/src/: TcpClient.cpp  UdpClient.cpp
client/lib/raylib/include/: AudioDevice.hpp  RayMusic.hpp  RayText.hpp  Sprite.hpp  Texture.hpp  Window.hpp
client/lib/raylib/src/: AudioDevice.cpp  RayMusic.cpp  RayText.cpp  Sprite.cpp  Window.cpp
client/src/: Animation.cpp  AutoDestructTimer.cpp  Background.cpp  Client.cpp  ClientRoom.cpp  Core.cpp  Game.cpp  GameUdpProtocol.cpp  GraphicalCore.cpp  GraphicsManager.cpp  Login.cpp  Speed.cpp  Sprite.cpp  Window.cpp  main.cpp
client/src/Raylib/: AudioDevice.cpp  RayMusic.cpp  RaySound.cpp  Sprite.cpp  TextureManager.cpp  Window.cpp
client/src/Systems/: SymtemSpeed.cpp  SystemAnimation.cpp  SystemAutoDestructTimer.cpp  SystemBackground.cpp  SystemMusic.cpp  SystemSpeed.cpp  SystemSprite.cpp  SystemTime.cpp
common/: CMakeLists.txt
common/ecs/include/: registry.hpp  registry.tpp  sparse_array.hpp  sparse_array.tpp
common/ecs/src/: registry.cpp
common/files_selector/: CMakeLists.txt
common/files_selector/include/: DLLoader.hpp  DLLoader.tpp
common/files_selector/src/: SafeDirectoryLister.cpp
common/games_selector/: CMakelists.txt
common/games_selector/include/: DLLoader.hpp  DLLoader.tpp
common/graphics_primitives/: CMakeLists.txt
common/graphics_primitives/include/: GraphicsInterface.hpp  GraphicsPrimitives.hpp
common/graphics_primitives/src/: GraphicsPrimitives.cpp
common/interface/: IDisplay.hpp  IGame.hpp
common/protocol/: CMakeLists.txt
common/protocol/include/: AsioApi.hpp  Client.hpp  Encoder.hpp  rtype_protocol.hpp
common/protocol/src/: AsioApi.cpp  Client.cpp  Encoder.cpp  rtype_protocol.cpp
docs/: Doxyfile  (+996 more)
ecs/: CMakeLists.txt  main.cpp
ecs/include/: Entity.hpp  component.hpp  ecs.hpp  entity.hpp  iregistry.hpp  isystem.hpp  registry.hpp  registry.tpp  sparse_array.hpp  sparse_array.tpp  system.hpp
ecs/src/: Entity.cpp  entity.cpp  registry.cpp
game/: CMakeLists.txt  entrypoints.cpp
game/include/: ActionMoveDown.hpp  ActionMoveDownReleased.hpp  ActionMoveUp.hpp  Camp.hpp  Damage.hpp  Health.hpp  Rtype.hpp  RtypeBullet.hpp  RtypeEnemy.hpp  RtypePlayer.hpp  SystemCreateEnemy.hpp  SystemDeleteEnemy.hpp
game/include/Actions/: ActionCreateBullet.hpp  ActionMoveLeft.hpp  ActionMoveLeftReleased.hpp  ActionMoveRight.hpp  ActionMoveRightReleased.hpp  ActionMoveUpReleased.hpp
game/include/Systems/: SystemComputeSingleBullet.hpp  SystemDeleteEnemy.hpp  SystemManageBullets.hpp
game/src/: ActionMoveDown.cpp  ActionMoveDownReleased.cpp  ActionMoveLeft.cpp  ActionMoveLeftReleased.cpp  ActionMoveRight.cpp  ActionMoveRightReleased.cpp  ActionMoveUp.cpp  ActionMoveUpReleased.cpp  Camp.cpp  Damage.cpp  Health.cpp  Rtype.cpp  RtypeBullet.cpp  RtypeEnemy.cpp  RtypePlayer.cpp  SystemCreateEnemy.cpp  SystemDeleteEnemy.cpp
game/src/Actions/: ActionCreateBullet.cpp  ActionMoveDown.cpp  ActionMoveDownReleased.cpp  ActionMoveLeft.cpp  ActionMoveLeftReleased.cpp  ActionMoveRight.cpp  ActionMoveRightReleased.cpp  ActionMoveUp.cpp  ActionMoveUpReleased.cpp
game/src/Systems/: SystemComputeSingleBullet.cpp  SystemCreateEnemy.cpp  SystemDeleteEnemy.cpp  SystemManageBullets.cpp
graphical/: CMakeLists.txt  main.cpp
graphical/include/: AudioDevice.hpp  RayMusic.hpp  Sprite.hpp  Window.hpp
graphical/src/: Sprite.cpp  Window.cpp
rework_project/client/lib/asio_client/: CMakeLists.txt
rework_project/client/lib/raylib/: CMakeLists.txt
rework_project/server/: CMakeLists.txt
rework_project/server/games/rtype/: CMakeLists.txt
rework_project/server/include/: Client.hpp  ClientActionLog.hpp  GameCore.hpp  GameLauncher.hpp  RessourcesManager.hpp  Room.hpp  RoomsCore.hpp  TcpProtocol.hpp
rework_project/server/lib/asio_server/: CMakeLists.txt
rework_project/server/lib/files_selector/: CMakeLists.txt
rework_project/server/src/: ClientActionLog.cpp  GameCore.cpp  GameLauncher.cpp  RessourcesManager.cpp  Room.cpp  RoomsCore.cpp  TcpProtocol.cpp  main.cpp
rework_project/upd_server/: CMakeLists.txt
rework_project/upd_server/src/: main.cpp
rtype/: CMakeLists.txt
rtype/include/: RtypeBuilder.hpp  Rtype_sc.hpp
rtype/src/: RtypeBuilder.cpp  Rtype_sc.cpp  main.cpp
server/: CMakeLists.txt  Server.cpp  Server.hpp
server/games/rtype/: CMakeLists.txt
server/include/: Client.hpp  ClientActionLog.hpp  GameCore.hpp  GameLauncher.hpp  RessourcesManager.hpp  Room.hpp  RoomsCore.hpp  Server.hpp  ServerLauncher.hpp  TcpProtocol.hpp
server/include/Systems/: BackgroundSystem.hpp  SpriteSystem.hpp  SystemGraphicSpriteSpeed.hpp
server/include/Thread/: Mutex.hpp  Promise.hpp  Promise.tpp  SafeQueue.hpp  SafeQueue.tpp  ScopeLock.hpp  ThreadPool.hpp  ThreadPool.tpp
server/lib/interface/: CMakeLists.txt  IGame.hpp
server/lib/process/: CMakeLists.txt
server/src/: Client.cpp  ClientActionLog.cpp  GameCore.cpp  GameLauncher.cpp  GameLauncherUdpProtocol.cpp  RessourcesManager.cpp  RoomsCore.cpp  SafeDirectoryLister.cpp  Server.cpp  ServerLauncher.cpp  TcpProtocol.cpp  TcpProtocolToClient.cpp  TcpProtocolUtils.cpp  main.cpp
server/src/Systems/: SpriteSystem.cpp  SystemGraphicSpriteSpeed.cpp  SystemTime.cpp
server/src/Thread/: ConditionVariable.cpp  Mutex.cpp  ScopeLock.cpp
test_raylib/: CMakeLists.txt  main.c
(+5496 files in other folders)
